# sector-pulse

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: ingest_fred.py
src/: main.py
src/test/python/: test_headline_ingest.py
