[project]
name = "sector-pulse"
version = "0.1.0"
description = "Automated weekly sector sentiment playbook for US equity rotation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fredapi>=0.5.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "yfinance>=1.2.0",
]
